Arruamando Layout(grid) do Dashboard

--- a/src/styles/bigcard.css
+++ b/src/styles/bigcard.css
@@ -1,9 +1,7 @@
 .bigcard{
-    width: 55em;
-    height: 20em;
-    margin-top:5rem;
-    margin-left: 5rem;
+    width: 63.3vw;
+    height: 40vh;
+    margin-left: 3em;
     background: #FBFBFB;
     border-radius: 8px;
-    
 }
