--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,9 +1,9 @@
 
 .card{
-    width: 20rem;
-    height: 10rem;
-    margin-top: 7rem;
+    width: 30vw;
+    height: 30vh;
+    margin-top: 2rem;
     background: #FBFBFB;
     border-radius: 8px;
-    margin-left: 5rem;
+    margin-left: 3rem;
 }
