--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,22 +1,35 @@
 .dashboard{
     display: grid;
     height: 100vh;
-    grid-template-columns: repeat(2, 40%);
-    grid-template-rows: 1.0fr 1.5fr;
-    width: 90vw;;
+    width: 100vw;;
     height: 100vh;
     background: #8C52E5;
     box-sizing: border-box;
+    width: 100vw;
+    grid-template-columns: 0fr  5fr ;
+    grid-template-rows: 1fr 1fr ;
+    column-gap: 3em;
+    grid-template-areas: "sidebar card1"
+                         "sidebar card3"
+                         ;
 }
 
-/* .card-1{
-    grid-column: 1 / 3;
-}
-
-.card-2 {
-    grid-column: 3 / 5;
-}
-
-.card-3{
-    grid-column: 1/ 3;
-} */
+.sidebar{
+    display:flex;
+    flex-direction:column;
+    grid-area: sidebar;
+    width: 10vw;
+  }
+  .card1{
+    grid-area: card1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 1vh;
+  }
+  .car2{
+    grid-area: card2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
