--- a/src/styles/buttonAction.css
+++ b/src/styles/buttonAction.css
@@ -1,4 +1,9 @@
 .buttonAction{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+
     width: 91px;
     height: 91px;
     left: 30px;
