--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,9 +1,10 @@
 .sidebar{
     display:flex;
+    justify-content:center;
+    align-items:center;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content:space-evenly;
-    align-items:center;
+    
     background: #68DE5A;
 
 }
