--- a/src/styles/buttonAction.css
+++ b/src/styles/buttonAction.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .buttonAction{
     display: flex;
     justify-content: center;
@@ -12,5 +14,14 @@
     background: #8C52E5;
     border-radius: 5px;
 
-    margin-top: 1rem
+    margin-top: 1rem;
+    padding-left: 10px;
+
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: #FFFFFF
+}
+
+.pix{
+    margin-bottom: 1rem;   
 }
