--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,27 @@
  padding: 0;
  box-sizing: border-box;
 }
+
+/* estilização do modais  */
+.react-modal-overlay {
+    background: rgba(0, 0, 0, 0.5);
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.react-modal-content {
+    width: 50%;
+    max-height: 576px;
+    background-color: #e8e8e8;
+    padding: 3rem;
+    position: relative;
+    border-radius: 0.24rem;
+}
