Mudando colores da Aplicação e estilizando formulario de deposito

--- a/src/styles/dashboard/dashboard.css
+++ b/src/styles/dashboard/dashboard.css
@@ -3,7 +3,7 @@
     height: 100vh;
     width: 100vw;;
     height: 100vh;
-    background: #8C52E5;
+    background: #321aab;
     box-sizing: border-box;
     width: 100vw;
     grid-template-columns: 0fr  5fr ;
