--- a/src/styles/sidebar/buttonAction.css
+++ b/src/styles/sidebar/buttonAction.css
@@ -11,7 +11,9 @@
     left: 30px;
     top: 170px;
 
-    background: #8C52E5;
+
+    background: #f3688b;
+    
     border-radius: 5px;
 
     margin-top: 1rem;
