--- a/src/styles/form/Form.css
+++ b/src/styles/form/Form.css
@@ -20,12 +20,23 @@ input {
     padding: 0 1.5em;
     margin-top: 1em;
     
-    border: 1px solid #d7d7d7;
+    border: 0;
     background: #cfcfcf;
     color: #000000;
 
     font-weight: 400;
     font-size: 1rem;
+}
+
+.icon-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    margin-top: 0;
+    border: none inset;
+    
 }
 
 button{
