--- a/src/styles/form/Form.css
+++ b/src/styles/form/Form.css
@@ -39,7 +39,7 @@ input {
     
 }
 
-button{
+.btn-submit{
     width: 100%;
     padding: 0 1.5em;
     height: 4rem;
@@ -52,5 +52,38 @@ button{
     border: 0;
 
     font-weight: 400;
+    font-size: 1rem;
+}
+
+.container-btns{
+    width: 100%;
+    margin: 1rem 0;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem ;
+    
+}
+
+.type-card{
+    height: 4rem;;
+    border: 1px solid #d7d7d7;
+    border-radius: 0.25rem;
+    background:transparent;
+    
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    gap: 0.5rem;
+}
+
+.type-card img {
+    width: 20px;
+    height: 20px;
+}
+
+.type-card span {
+    display: inline-block;
+    margin-left: 1rem;
     font-size: 1rem;
 }
