--- a/src/styles/dashboard/transactiontable.css
+++ b/src/styles/dashboard/transactiontable.css
@@ -6,11 +6,25 @@
     margin-left: 3em;
     background: #FBFBFB;
     border-radius: 8px;
+    overflow: auto;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #F4F4F4;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background: #F4F4F4;
+}
+::-webkit-scrollbar-thumb {
+    background: #f3275a;
 }
 
 table {
     width: 100%;
     border-spacing:0 0.5rem;
+    padding: 0 2rem 0;
 }
 
 th {
