Correção e estilização dos modais

--- a/src/styles/form/Form.css
+++ b/src/styles/form/Form.css
@@ -4,6 +4,7 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
@@ -53,6 +54,17 @@ input {
 
     font-weight: 400;
     font-size: 1rem;
+}
+
+.btn-close{
+    position: absolute;
+    right: 0%;
+    top: 0%;
+    border: none;
+}
+
+.btn-close img:hover{
+    filter: brightness(50%)
 }
 
 .container-btns{
