--- a/src/styles/form/Form.css
+++ b/src/styles/form/Form.css
@@ -15,7 +15,13 @@ h2 {
 
 }
 
-input {
+label {
+    width: 100%;
+    margin-top: 1em;
+    color: #9B9B9B;
+}
+
+input  {
     width: 100%;
     height: 4rem;
     padding: 0 1.5em;
