resolvendo bug do css dos botãoes de formulario de pagamento

--- a/src/styles/form/Form.css
+++ b/src/styles/form/Form.css
@@ -104,6 +104,10 @@ input  {
     background: #f8003e;
  }    
 
+.type-card:active{
+    background: #f8003e;
+}
+
 .type-card img {
     width: 30px;
     height: 30px;
