--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@
 .react-modal-content {
     width: 50%;
     max-height: 576px;
-    background-color: #e8e8e8;
+    background-color:#f3688b;
     padding: 3rem;
     position: relative;
     border-radius: 0.24rem;
